# psyduck

./: .gitignore  README.md  pyproject.toml
psyduck/: main.py
psyduck/core/: config.py
