[tool.poetry]
name = "psyduck"
version = "0.1.0"
description = ""
authors = ["margo-noise <margo.stn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.95.1"}
pydantic = {extras = ["email"], version = "^1.10.7"}
uvicorn = "^0.21.1"
alembic = "^1.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
